--- a/source/TR-181/middle_layer_src/Makefile.am
+++ b/source/TR-181/middle_layer_src/Makefile.am
@@ -32,16 +32,12 @@
 # * limitations under the License.
 #*/
 ####################################################################################
-AM_CFLAGS = -D_ANSC_LINUX
-AM_CFLAGS += -D_ANSC_USER
-AM_CFLAGS += -D_ANSC_LITTLE_ENDIAN_
-AM_LDFLAGS = -lccsp_common
+AM_CFLAGS =
 
-AM_CPPFLAGS = -Wall -Werror
 ACLOCAL_AMFLAGS = -I m4
-hardware_platform = i686-linux-gnu
 
 noinst_LTLIBRARIES = libRdkVlanManager_middle_layer_src.la
-libRdkVlanManager_middle_layer_src_la_CPPFLAGS = -I/var/tmp/pc-rdkb/include/dbus-1.0 -I$(top_srcdir)/../CcspCommonLibrary/source/ccsp/custom -I$(top_srcdir)/../CcspCommonLibrary/source/ccsp/include -I$(top_srcdir)/../CcspCommonLibrary/source/debug_api/include -I$(top_srcdir)/../CcspCommonLibrary/source/cosa/include -I$(top_srcdir)/../CcspCommonLibrary/source/cosa/include/linux -I$(top_srcdir)/../CcspCommonLibrary/source/ccsp/components/include -I$(top_srcdir)/../CcspCommonLibrary/source/cosa/package/slap/include -I$(top_srcdir)/../hal/include -I$(top_srcdir)/source/TR-181/board_sbapi -I$(top_srcdir)/../CcspCommonLibrary/source/util_api/http/include -I$(top_srcdir)/../CcspCommonLibrary/source/util_api/ansc/include -I$(top_srcdir)/source/TR-181/middle_layer_src -I$(top_srcdir)/../CcspCommonLibrary/source/ccsp/components/common/MessageBusHelper/include -I$(top_srcdir)/source/TR-181/include -I$(top_srcdir)/source/RdkVlanManager $(CPPFLAGS)
+
+libRdkVlanManager_middle_layer_src_la_CPPFLAGS = -I$(top_srcdir)/source/TR-181/include -I$(top_srcdir)/source/TR-181/board_sbapi -I$(top_srcdir)/source/TR-181/middle_layer_src -I$(top_srcdir)/source/RdkVlanManager
 libRdkVlanManager_middle_layer_src_la_SOURCES = plugin_main.c plugin_main_apis.c vlan_apis.c vlan_dml.c vlan_internal.c ethernet_internal.c ethernet_dml.c ethernet_apis.c vlan_eth_hal.c
-libRdkVlanManager_middle_layer_src_la_LDFLAGS =  -lccsp_common -lhal_platform -lsyscfg -lsysevent -lpthread -lsecure_wrapper
+libRdkVlanManager_middle_layer_src_la_LDFLAGS = -lccsp_common -lhal_platform -lsyscfg -lsysevent -lpthread -lsecure_wrapper
