--- a/source/RdkVlanManager/Makefile.am
+++ b/source/RdkVlanManager/Makefile.am
@@ -49,6 +49,6 @@ VlanManager_DEPENDENCIES = \
 
 VlanManager_CFLAGS = -D_ANSC_LINUX -D_ANSC_USER -D_ANSC_LITTLE_ENDIAN_ -DFEATURE_SUPPORT_RDKLOG $(DBUS_CFLAGS) $(SYSTEMD_CFLAGS)
 VlanManager_SOURCES = ssp_action.c ssp_messagebus_interface.c ssp_main.c
-VlanManager_LDFLAGS = -lccsp_common -lrdkloggers $(DBUS_LIBS) $(SYSTEMD_LDFLAGS) -lbreakpadwrapper
+VlanManager_LDFLAGS = -lccsp_common -lrdkloggers $(DBUS_LIBS) $(SYSTEMD_LDFLAGS) -lbreakpadwrapper -lsecure_wrapper
 VlanManager_LDADD =  $(VlanManager_DEPENDENCIES)
 
